objects/SCV_Merge_Related_Entity_Field_Set__mdt.object
<CustomObject>
    <description>This will control the fields to display the data in related entities to merge from the UI.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fieldset_API_Name__c</fullName>
        <label>Fieldset API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fieldset_Display_Name__c</fullName>
        <label>Fieldset Display Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Field_Name__c</fullName>
        <label>Lookup Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Api_Names__c</fullName>
        <label>Object Api Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPersonContactId__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPersonContactId</label>
        <type>Checkbox</type>
    </fields>
    <label>SCV Merge Related Entity Field Set</label>
    <pluralLabel>SCV Merge Related Entity Field Sets</pluralLabel>
</CustomObject>